@startuml rede_campo_online

skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam groupInheritance 2
hide empty members

' ═══════════════════════════════════════════════════════════════
' GEOGRAPHY
' ═══════════════════════════════════════════════════════════════

package "Geography" #FFF8DC {

  class State {
    +id: int
    +name: String
    --
    +{static} fromMap(map: Map): State
    +toString(): String
  }

  class City {
    +id: int
    +state_id: int
    +name: String
    --
    +{static} fromMap(map: Map): City
    +toString(): String
  }

  class Address {
    +id: int
    +city_id: int
    +street: String
    +neighborhood: String
    +number: String
    +cep: String
    +complement: String
    --
    +{static} fromMap(map: Map): Address
    +toMap(): Map
    +toString(): String
  }

  State "1" --> "n..*" City
  City  "1" --> "n..*" Address
}

' ═══════════════════════════════════════════════════════════════
' ORGANIZATION & MEMBERS
' ═══════════════════════════════════════════════════════════════

package "Organization & Members" #FFE8E8 {

  class Organization {
    +id: int
    +address_id: int
    +name: String
    +logo: String
    --
    +{static} fromMap(map: Map): Organization
    +toMap(): Map
    +toString(): String
  }

  class MemberRole {
    +id: int
    +name: String
    --
    +{static} fromMap(map: Map): MemberRole
    +toMap(): Map
    +toString(): String
  }

  class Member {
    +id: int
    +member_role_id: int
    +organization_id: int
    +name: String
    +email: String
    +description: String
    +lattes_url: String
    +linked_in_url: String
    +profile_picture: String
    +password: String
    --
    +{static} fromMap(map: Map): Member
    +toMap(): Map
    +toString(): String
  }

  class ExternalAuthor {
    +id: int
    +name: String
    +email: String
    +orcid: String
    --
    +{static} fromMap(map: Map): ExternalAuthor
    +toMap(): Map
    +toString(): String
  }

  Address      "1" --> "1..*" Organization
  MemberRole   "1" --> "n..*" Member
  Organization "1" --> "n..*" Member
}

' ═══════════════════════════════════════════════════════════════
' RESEARCH AREA
' ═══════════════════════════════════════════════════════════════

package "Research Area" #E8FFE8 {

  class ResearchArea {
    +id: int
    +name: String
    --
    +{static} fromMap(map: Map): ResearchArea
    +toMap(): Map
    +toString(): String
  }
}

' ═══════════════════════════════════════════════════════════════
' PROJECTS
' ═══════════════════════════════════════════════════════════════

package "Projects" #E8F4FF {

  class ProjectType {
    +id: int
    +name: String
    --
    +{static} fromMap(map: Map): ProjectType
    +toString(): String
  }

  class Project {
    +id: int
    +project_type_id: int
    +name: String
    +description: String
    +status: String
    +begin_date: Date
    +end_date: Date
    --
    +{static} fromMap(map: Map): Project
    +toMap(): Map
    +toString(): String
  }

  class ProjectMedia {
    +id: int
    +project_id: int
    +name: String
    +media: String
    --
    +{static} fromMap(map: Map): ProjectMedia
    +toMap(): Map
    +toString(): String
  }

  ProjectType "1"    --> "n..*" Project
  Project     "0"    --> "n..*" ProjectMedia
  Project     "1..*" --  "n..*" Member
  Project     "1..*" --  "n..*" ResearchArea
}

' ═══════════════════════════════════════════════════════════════
' EVENTS
' ═══════════════════════════════════════════════════════════════

package "Events" #FFF0E0 {

  class Event {
    +id: int
    +address_id: int
    +project_id: int
    +name: String
    +date: Date
    +description: String
    +registration_url: String
    --
    +{static} fromMap(map: Map): Event
    +toMap(): Map
    +toString(): String
  }

  class EventMedia {
    +id: int
    +event_id: int
    +name: String
    +media: String
    --
    +{static} fromMap(map: Map): EventMedia
    +toMap(): Map
    +toString(): String
  }

  Project "1" --> "n..*" Event
  Address "1" --> "n..*" Event
  Event   "0" --> "n..*" EventMedia
}

' ═══════════════════════════════════════════════════════════════
' NEWS
' ═══════════════════════════════════════════════════════════════

package "News" #F5E8FF {

  class News {
    +id: int
    +project_id: int
    +member_id: int
    +title: String
    +description: String
    +content: String
    +publication_date: Date
    --
    +{static} fromMap(map: Map): News
    +toMap(): Map
    +toString(): String
  }

  class NewsMedia {
    +id: int
    +news_id: int
    +name: String
    +media: String
    --
    +{static} fromMap(map: Map): NewsMedia
    +toMap(): Map
    +toString(): String
  }

  Project "1"    --> "n..*" News
  Member  "1"    --> "n..*" News
  News    "0"    --> "n..*" NewsMedia
  News    "1..*" --  "n..*" ResearchArea
}

' ═══════════════════════════════════════════════════════════════
' PUBLICATIONS
' ═══════════════════════════════════════════════════════════════

package "Publications" #FFEEF8 {

  class Publication {
    +id: int
    +title: String
    +abstract: String
    +publication_date: Date
    +doi: String
    --
    +{static} fromMap(map: Map): Publication
    +toMap(): Map
    +toString(): String
  }

  class Article {
    +publication_id: int
    +journal_name: String
    +volume: String
    +issue: String
    +pages: String
    +publisher: String
    --
    +{static} fromMap(map: Map): Article
    +toMap(): Map
    +toString(): String
  }

  class Book {
    +publication_id: int
    +publisher: String
    +edition: String
    +cover_photo: String
    --
    +{static} fromMap(map: Map): Book
    +toMap(): Map
    +toString(): String
  }

  class BookChapter {
    +publication_id: int
    +chapter_number: int
    +book_name: String
    --
    +{static} fromMap(map: Map): BookChapter
    +toMap(): Map
    +toString(): String
  }

  class Thesis {
    +publication_id: int
    +organization_id: int
    +number_of_pages: int
    --
    +{static} fromMap(map: Map): Thesis
    +toMap(): Map
    +toString(): String
  }

  class ContributorRole {
    +id: int
    +name: String
    --
    +{static} fromMap(map: Map): ContributorRole
    +toMap(): Map
    +toString(): String
  }

  class Contributor {
    +publication_id: int
    +author_order: int
    +member_id: int
    +external_author_id: int
    +contributor_role_id: int
    --
    +{static} fromMap(map: Map): Contributor
    +toMap(): Map
    +toString(): String
  }

  Publication     <|-- Article
  Publication     <|-- Book
  Publication     <|-- BookChapter
  Publication     <|-- Thesis

  Organization    "1"    --> "n..*" Thesis
  Publication     "1"    --> "n..*" Contributor
  ContributorRole "1"    --> "n..*" Contributor
  Member          "0..*" --  "n..*" Publication
  ExternalAuthor  "0..*" --  "1..*" Publication
  Publication     "1..*" --  "n..*" ResearchArea
}

@enduml
